--- a/CSS/main.css
+++ b/CSS/main.css
@@ -6,44 +6,18 @@
     box-sizing: border-box;
 }
 body{
-    background-color: aquamarine;
+    background-color: #1c6547;
+    padding-top: 10px;
+    
 }
 .Allcon{
-    background-color: aliceblue;
-    text-align: center;
-}
-nav{
     background-color: white;
-    height: 75px;
-    width: 100%;	
-    position: fixed;
-      top: 0;
-      left: 0;
-     z-index: 9999;
-     width: 100%;
-    -webkit-box-shadow: 0 1px 3px grey;
-    -moz-box-shadow: 0 1px 3px grey;
-    box-shadow: 0 1px 3px grey;
-}		
-label.logo{
-    color: black;
-    font-size: 35px;
-    line-height: 75px;
-    padding: 0 100px;
-    font-family: bold;
+    text-align: center;
+    width: 80%;
+    margin: auto;
 }
-nav ul{
-    float: right;
-    margin-right: 20px;
+.introduction{
+    margin-top: 10px;
 }
-nav ul li{
-    display: inline-block;
-    line-height: 75px;
-    margin: 0 20px;
-}
-nav ul li a{
-    color: black;
-    font-size: 17px;
-    text-transform: uppercase;
-}
+
 
