--- a/CSS/navigation.css
+++ b/CSS/navigation.css
@@ -1,1 +1,35 @@
-
+nav{
+    background-color: white;
+    height: 75px;
+    width: 100%;	
+    position: fixed;
+      top: 0;
+      left: 0;
+     z-index: 9999;
+     width: 100%;
+    -webkit-box-shadow: 0 1px 3px grey;
+    -moz-box-shadow: 0 1px 3px grey;
+    box-shadow: 0 1px 3px grey;
+}		
+label.logo{
+    color: black;
+    font-size: 35px;
+    line-height: 75px;
+    padding: 0 50px;
+    font-family: bold;
+    float: left;
+}
+nav ul{
+    float: right;
+    margin-right: 20px;
+}
+nav ul li{
+    display: inline-block;
+    line-height: 75px;
+    margin: 0 20px;
+}
+nav ul li a{
+    color: black;
+    font-size: 17px;
+    text-transform: uppercase;
+}
