--- a/CSS/main.css
+++ b/CSS/main.css
@@ -6,18 +6,13 @@
     box-sizing: border-box;
 }
 body{
-    background-color: #1c6547;
-    padding-top: 10px;
-    
+    background-color: #651c1c;    
 }
 main{
     background-color: white;
     text-align: center;
     width: 80%;
     margin: auto;
-}
-.introduction{
-    margin-top: 10px;
 }
 
 
