--- a/CSS/main.css
+++ b/CSS/main.css
@@ -6,7 +6,7 @@
     box-sizing: border-box;
 }
 body{
-    background-color: #651c1c;    
+    background-color: #1c6547;    
 }
 main{
     background-color: white;
