--- a/CSS/main.css
+++ b/CSS/main.css
@@ -6,7 +6,7 @@
     box-sizing: border-box;
 }
 body{
-    background-color: #1c6547;    
+    background-color: rgb(28, 101, 71);    
 }
 main{
     background-color: white;
